solved a problem with the scrolling, due to the removing of the  perfect-scrollbar module

--- a/client/css/columnsView.css
+++ b/client/css/columnsView.css
@@ -37,7 +37,7 @@
     height: -webkit-calc(100vh - 85px);
     
     position: relative;
-    overflow: hidden;
+    overflow: auto;
 }
 
 @media (min-width: 1000px) {
@@ -158,7 +158,7 @@
     height: 100%;
     display: none;
     position: relative;
-    overflow: hidden;
+    overflow: auto;
 }
 
 #columnsView > div.wrapper > div.column.big > div.wrapper > div.wrapper {margin: 8px 0;}
